--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
       </div>
     </main>
 
+    <footer><p>Eric Bortoleto 2023 @ Todos os direitos reservados</p></footer>
+
     <script src="/script.js"></script>
   </body>
 </html>
